# flow: ExpoDevClient
# intent:
#   Open up Expo's dev client menu and connect to
#   the locally running dev server

appId: ${APP_ID}
---
- stopApp
- launchApp
- tapOn: 'Enter URL manually'
- inputText: 'http://localhost:8081?disableOnboarding=1'
- hideKeyboard
- tapOn: 'Connect'
